Repairing paths and database

--- a/09_laravel_tdd/index.ipynb
+++ b/09_laravel_tdd/index.ipynb
@@ -55,14 +55,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "532c0ea069df0ec8bec167d73261f1de5f0a09c838ea40a95d4cbeea19a7d455\n"
+      "047ff6e0eac91f7fa1594217c8746049e78b7e3716c18ce3694f865f62da40bc\n"
      ]
     }
    ],
@@ -2141,9 +2141,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/student/php_2024_iad_sys_mgmt_hotel_evts/09_laravel_tdd\n"
+     ]
+    }
+   ],
    "source": [
     "%cd .."
    ]
@@ -2157,12 +2165,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mysql\n"
+     ]
+    }
+   ],
    "source": [
     "! docker container stop mysql"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
