--- a/09_laravel_tdd/index.ipynb
+++ b/09_laravel_tdd/index.ipynb
@@ -2094,7 +2094,28 @@
       "2025-01-22 23:28:34,403 [1504791] SEVERE - com.jediterm.terminal.model.TerminalTextBuffer - Attempt to get line out of bounds: 10 >= 10\n",
       "2025-01-22 23:28:34,403 [1504791] SEVERE - com.jediterm.terminal.model.TerminalTextBuffer - Attempt to get line out of bounds: 10 >= 10\n",
       "2025-01-22 23:31:16,229 [1666617] SEVERE - com.jediterm.terminal.model.TerminalTextBuffer - Attempt to get line out of bounds: 10 >= 10\n",
-      "2025-01-22 23:31:16,230 [1666618] SEVERE - com.jediterm.terminal.model.TerminalTextBuffer - Attempt to get line out of bounds: 10 >= 10\n"
+      "2025-01-22 23:31:16,230 [1666618] SEVERE - com.jediterm.terminal.model.TerminalTextBuffer - Attempt to get line out of bounds: 10 >= 10\n",
+      "2025-01-22 23:58:16,846 [3287234]   WARN - #c.j.p.PhpIndex - Completing type '#M#C\\Illuminate\\Database\\Schema\\Blueprint.foreignId' took 1082ms, visited:[#M#C\\Illuminate\\Database\\Schema\\Blueprint.foreignId]\n",
+      "2025-01-22 23:58:16,863 [3287251]   WARN - #c.j.p.PhpIndex - Completing type '#M#π(#M#C\\Illuminate\\Database\\Schema\\Blueprint.foreignId)(\"user_id\").constrained' took 1121ms, visited:[#M#π(#M#C\\Illuminate\\Database\\Schema\\Blueprint.foreignId)(\"user_id\").constrained]\n",
+      "2025-01-22 23:59:24,191 [3354579]   WARN - #c.j.p.PhpIndex - Completing type '#M#g#F\\App\\Http\\Controllers\\redirect.route' took 793ms, visited:[#M#g#F\\App\\Http\\Controllers\\redirect.route]\n",
+      "2025-01-22 23:59:24,195 [3354583]   WARN - #c.j.p.PhpIndex - Completing type '#π(#M#M#g#F\\App\\Http\\Controllers\\redirect.route.with)(\"message\")(\"Rejestracja przebiegła pomyślnie!\")' took 799ms, visited:[#o#Э#M#C\\App\\Http\\Controllers\\EventController.store, #π(#M#M#g#F\\App\\Http\\Controllers\\redirect.route.with)(\"message\")(\"Rejestracja przebiegła pomyślnie!\")]\n",
+      "2025-01-23 00:03:15,752 [3586140]   WARN - #c.j.p.PhpIndex - Completing type '#M#g#F\\App\\Http\\Controllers\\redirect.route' took 608ms, visited:[#M#g#F\\App\\Http\\Controllers\\redirect.route]\n",
+      "2025-01-23 00:03:15,761 [3586149]   WARN - #c.j.p.PhpIndex - Completing type '#π(#M#M#g#F\\App\\Http\\Controllers\\redirect.route.with)(\"message\")(\"Rejestracja przebiegła pomyślnie!\")' took 635ms, visited:[#π(#M#M#g#F\\App\\Http\\Controllers\\redirect.route.with)(\"message\")(\"Rejestracja przebiegła pomyślnie!\")]\n",
+      "2025-01-23 00:07:48,289 [3858677]   WARN - #c.j.p.PhpIndex - Invalid Signature '\\Illuminate\\Database\\Eloquent\\Concerns\\class-string<#ᢐ\\TRelatedModel.>'\n",
+      "2025-01-23 00:07:48,323 [3858711]   WARN - #c.j.p.PhpIndex - Invalid Signature '\\Illuminate\\Database\\Eloquent\\Relations\\BelongsTo<#ᢐ\\TRelatedModel.,\\Illuminate\\Database\\Eloquent\\Concerns\\HasRelationships>'\n",
+      "2025-01-23 00:07:57,078 [3867466]   WARN - #c.j.p.PhpIndex - Invalid Signature '\\Illuminate\\Database\\Eloquent\\Concerns\\class-string<#ᢐ\\TRelatedModel.>'\n",
+      "2025-01-23 00:07:57,847 [3868235]   WARN - #c.j.p.PhpIndex - Invalid Signature '\\Illuminate\\Database\\Eloquent\\Relations\\BelongsTo<#ᢐ\\TRelatedModel.,\\Illuminate\\Database\\Eloquent\\Concerns\\HasRelationships>'\n",
+      "2025-01-23 00:08:00,147 [3870535]   WARN - #c.j.p.PhpIndex - Invalid Signature '\\Illuminate\\Database\\Eloquent\\Relations\\BelongsTo<#ᢐ\\TRelatedModel.,\\Illuminate\\Database\\Eloquent\\Concerns\\HasRelationships>'\n",
+      "2025-01-23 00:08:00,218 [3870606]   WARN - #c.j.p.PhpIndex - Invalid Signature '\\Illuminate\\Database\\Eloquent\\Concerns\\class-string<#ᢐ\\TRelatedModel.>'\n",
+      "2025-01-23 00:08:01,055 [3871443]   WARN - #c.j.p.PhpIndex - Completing type '#F\\redirect' took 517ms, visited:[#F\\redirect]\n",
+      "2025-01-23 00:08:01,217 [3871605]   WARN - #c.j.p.PhpIndex - Completing type '#M#g#F\\App\\Http\\Controllers\\redirect.back' took 680ms, visited:[#M#g#F\\App\\Http\\Controllers\\redirect.back]\n",
+      "2025-01-23 00:21:16,937 [4667325]   WARN - #c.j.p.PhpIndex - Invalid Signature '\\Illuminate\\Database\\Eloquent\\Relations\\BelongsTo<#ᢐ\\TRelatedModel.,\\Illuminate\\Database\\Eloquent\\Concerns\\HasRelationships>'\n",
+      "2025-01-23 00:21:16,942 [4667330]   WARN - #c.j.p.PhpIndex - Invalid Signature '\\Illuminate\\Database\\Eloquent\\Concerns\\class-string<#ᢐ\\TRelatedModel.>'\n",
+      "2025-01-23 00:24:09,885 [4840273]   WARN - #c.i.o.a.i.Utils - 2137 ms to fillMenu@EditorPopup\n",
+      "2025-01-23 00:28:59,797 [5130185]   WARN - #c.j.p.PhpIndex - Completing type '#M#C\\App\\Models\\Reservation.where' took 537ms, visited:[#M#C\\App\\Models\\Reservation.where]\n",
+      "2025-01-23 00:40:11,257 [5801645]   WARN - #c.j.p.PhpIndex - Completing type '#M#g#F\\App\\Http\\Controllers\\redirect.route' took 542ms, visited:[#M#g#F\\App\\Http\\Controllers\\redirect.route]\n",
+      "2025-01-23 00:40:11,261 [5801649]   WARN - #c.j.p.PhpIndex - Completing type '#π(#M#M#g#F\\App\\Http\\Controllers\\redirect.route.with)(\"message\")(\"Rejestracja przebiegła pomyślnie!\")' took 546ms, visited:[#π(#M#M#g#F\\App\\Http\\Controllers\\redirect.route.with)(\"message\")(\"Rejestracja przebiegła pomyślnie!\")]\n",
+      "2025-01-23 00:51:09,160 [6459548]   WARN - #c.i.u.x.Binding - No accessors for org.jetbrains.security.package.Package. This means that state class cannot be serialized properly. Please see https://jb.gg/ij-psoc\n"
      ]
     }
    ],
